<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/gameOverview_TextView_gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/gameOverview_ImageView_gameIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:src="@drawable/new_item" />

    <TextView
        android:id="@+id/gameOverview_TextView_gameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/gameOverview_Button_startGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <Button
        android:id="@+id/gameOverview_Button_viewMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_more" />

    <Button
        android:id="@+id/gameOverview_Button_deleteGame"
        style="?android:attr/buttonStyleSmall"
        android:background="@drawable/unfriend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete_game"
        android:textColor="#660000" />

</LinearLayout>