<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/empty_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/profile_textView_appUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
		android:id="@+id/profile_textView_presence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="10sp" >
    </TextView>

    <TextView
        android:id="@+id/empty_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/profile_imageView_appUserImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/new_item" />

    <TextView
        android:id="@+id/empty_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/profile_textView_yourTrophies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_trophies"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/profile_listView_trophies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/profile_textView_noTrophiesMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:text="@string/no_trophies_message" />

    <Button
        android:id="@+id/profile_button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_button" />

</LinearLayout>