<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/home_textView_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/empty_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/dark_gray" >

        <ImageView
            android:id="@+id/home_imageView_challengeRequestNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/new_item" />

        <TextView
            android:id="@+id/home_textView_challengeRequests_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/home_textView_challengeRequests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge_requests_yes"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ListView
        android:id="@+id/home_listView_challengeRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/dark_gray" >

        <ImageView
            android:id="@+id/home_imageView_friendRequestNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/new_item" />

        <TextView
            android:id="@+id/home_textView_friendRequests_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/home_textView_friendRequests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_requests_yes"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ListView
        android:id="@+id/home_listView_friendRequests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
         />

</LinearLayout>